Jul 22 2003  2.9.1  Integrated not-broken heading code from gkismet to do 
                     software heading calcs.  Hopefully I didn't break it. Fix
                     to compass coming soon.
Jul 21 2003  2.9.1  Added gpsmodelock config file option to override a gps lock
                     of 0.  This will override broken GPS units that always 
                     report no lock via gpsd.
                    Added heading support for GPS units with magnetic compasses.
                     This requires a patched gpsd, patch is in extra/
Jul 20 2003  2.9.1  Revamped how GPS is handled, should fix problems of it
                     losing locks constantly.
Jul 17 2003  2.9.1  Added full 802.11a channel list to kismet.conf
                    Added frequency to channel translation
                    Added cardtype acx100 for TI 22mbit cards
Jul 16 2003  2.9.1  Added carrier 802.11b+ for future use
Jul 14 2003  2.9.1  Fixed configure on OSX to enable viha correctly
Jul 13 2003  2.9.1  Fixed 'Linksys' SSID in ap_manuf
Jul 11 2003  2.9.1  Fixed initialization of some fields in kis_win in panels
                    Merged patch from Ron for openbsd APM battery support
Jul 09 2003  2.9.1  Tweaked configure script to disable pcap and enable viha on
                     OSX installs.
                    Added line wrapping to alerts and status window
Jul 05 2003  2.9.1  Added fatal condition if channel lists are empty
                    Tweaked packet.h to like newer and older gccs again
Jul 04 2003  2.9.1  Added caching of client IP data
Jul 03 2003  2.9.1  Totally revamped mac-masking code and manufacturer
                     matching code.
                    Added environment var KISMET_CONF to change the directory
                     kismet looks in for config and manuf files by default
Jun 22 2003  2.9.1  Added panels UI display of current channel
                    Added some other paths to kismet_monitor for binaries